--- a/经济学与互联网研发.md
+++ b/经济学与互联网研发.md
@@ -2,4 +2,4 @@
 ## 经济学分析在互联网研发中的应用之我见 ##
 
 **先吐个糟**
-> 我被骗了！经济学讲的不是我一直以为的“经世济民”，而是实实在在的“家政理财”！过去我对“经济”的理解就来自《政治经济学》和报纸上的“我国经济发展”之类的词汇，一直以为经济学跟我这样的草民毫无关系，也没必要关心。这次学习经济学，还是因为那个大数据与智能商务方向吸引了我。
+> 我被骗了！经济学讲的不是我一直以为的“经世济民”，而是实实在在的“家政理财”！过去我对“经济”的理解就来自《政治经济学》和报纸上的“我国经济发展”之类的词汇，一直以为经济学跟我这样的草民毫无关系，也没必要关心。这次学习经济学，还是因为那个大数据与智能商务方向吸引了我，我才知道什么叫经济学。
